--- a/day6 - kotlin4/App/DatingApp/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/day6 - kotlin4/App/DatingApp/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_home"
         android:title="Home"/>
     <item
+        android:id="@+id/lineFragment"
+        android:icon="@drawable/ic_line"
+        android:title="Line"/>
+    <item
         android:id="@+id/chatFragment"
         android:icon="@drawable/ic_chat"
         android:title="Chat"/>
