--- a/day6 - kotlin4/App/DatingApp/app/src/main/res/navigation/nav_graph.xml
+++ b/day6 - kotlin4/App/DatingApp/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/lineFragment"
+        android:name="com.example.datingapp.fragments.LineFragment"
+        android:label="Line"
+        tools:layout="@layout/fragment_chat" />
+
+    <fragment
         android:id="@+id/chatFragment"
         android:name="com.example.datingapp.fragments.ChatFragment"
         android:label="Chat"
